Invokes inefficient new Integer(int) constructor.
Use Integer.valueOf(int) instead.